--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ pdc-dp-means==0.0.6
 scikit-learn==1.5.0
 scikit-learn-3way-split==0.0.1
 scikit-learn-VAL==0.0.1
-sklearn==0.0.post12
+scikit-learn==0.0.post12
 the1owl==0.0.8
 theBrainFuck==0.0.3
